changes made (separated two coollections)
