# validator/bookValidator.js
@@ -1,12 +1,15 @@
 const validator = require('../helpers/validate');
 
-const saveContact = (req, res, next) => {
+const saveBooks = (req, res, next) => {
   const validationRule = {
-    firstName: 'required|string',
-    lastName: 'required|string',
-    email: 'required|email',
-    address: 'required|string',
-    phoneNumber: 'string'
+    bookTitle: 'required|string',
+    authorName: 'required|string',
+    borrowerName: 'required|string',
+    dateBorrowed: 'required|string',
+    dateReturn: 'required|string',
+    phoneNumber: 'required|string',
+    librarian: 'required|string',
+
   };
   validator(req.body, validationRule, {}, (err, status) => {
     if (!status) {
@@ -22,5 +25,5 @@ const saveContact = (req, res, next) => {
 };
 
 module.exports = {
-  saveContact
+  saveBooks
 };
